--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -11,6 +11,6 @@ spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 
 DB=127.0.0.1
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
